# asynchrony_game_space

./: README.md  curses_tools.py  main.py  obstacles.py  pyproject.toml
animations_frames/space_debris/: trash_small.txt
